# pull-request-project

./: .gitignore  new_everyday.py  pyproject.toml
.github/workflows/: lint.yml
src/pull_request_project/: new_everyday.py
