[project]
name = "project-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry",email = "kopdevile@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.13.2,<5.0.0)"
]

[tool.poetry]
packages = [{include = "project_poetry", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
extend-select = ["F821"]



